<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordEmail"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/imageButtonBackForgotPasswordEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/back_button_bg"
                android:padding="5dp"
                android:src="@drawable/login_page_arrow_left_back_button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="left"
                    android:inputType="textCapWords"
                    android:text="@string/textView1ForgotPasswordEmail"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:inputType="textMultiLine"
                    android:text="@string/textView2ForgotPasswordEmail"
                    android:textColor="@color/Grey700"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/editTextForgotPasswordEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/add_item_edit_text_bg"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/editTextRegisterPageEmail"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="18dp"
                    android:textColor="?attr/colorOnBackground"/>

                <Button
                    android:id="@+id/buttonForgotPasswordEmailSendLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/add_item_edit_text_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/buttonSendVerificationCode"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewTextForgotPasswordEmailId"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="end"
                        android:text="@string/textView3ForgotPasswordEmail"
                        android:textColor="?attr/colorPrimary"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/textViewResendLinkForgotPasswordEmailId"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/textView4ForgotPasswordEmail"
                        android:textColor="@color/BlueA700"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>