<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/topAppBarLoginPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                app:navigationIcon="@drawable/login_page_arrow_left_back_button"
                app:title="@string/app_name"
                app:titleTextColor="?attr/colorOnPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp">


                <EditText
                    android:id="@+id/editTextLoginEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/add_item_edit_text_bg"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/editTextRegisterPageEmail"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="18dp"
                    android:textColor="?attr/colorOnBackground"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/password_icon"
                    app:startIconTint="@color/Grey500">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTextLoginPagePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/add_item_edit_text_bg"
                        android:hint="@string/editTextRegisterPagePassword"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:paddingStart="40dp"
                        android:textColor="?attr/colorOnBackground"
                        android:textSize="18dp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonLoginPageLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/add_item_edit_text_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/buttonLoginPageLogin"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBoxIsUserLoggedIn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:text="Keep Me Logged In"
                        android:textAllCaps="false"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="14dp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textViewLoginPageForgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:text="@string/textViewForgotPassword"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>