<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordEmail"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/imageButtonBackForgotPasswordResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_page_arrow_left_back_button"
                android:background="@drawable/back_button_bg"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:text="@string/textView1ForgotPasswordResetPassword"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnBackground"
                    android:gravity="left"
                    android:layout_marginTop="50dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="@string/textView2ForgotPasswordResetPassword"
                    android:textSize="14dp"
                    android:textColor="@color/Grey700"
                    android:layout_marginTop="10dp"
                    android:gravity="left"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="30dp"
                    app:startIconDrawable="@drawable/password_icon"
                    app:hintEnabled="false"
                    app:boxBackgroundMode="none"
                    app:startIconTint="@color/Grey500">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTextForgotPasswordResetPasswordPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/add_item_edit_text_bg"
                        android:hint="@string/editTextRegisterPagePassword"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:paddingStart="40dp"
                        android:textColor="?attr/colorOnBackground"
                        android:textSize="18dp"
                        android:textStyle="normal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="20dp"
                    app:startIconDrawable="@drawable/password_icon"
                    app:hintEnabled="false"
                    app:boxBackgroundMode="none"
                    app:startIconTint="@color/Grey500">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTextForgotPasswordResetPasswordConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editTextRegisterPageConfirmPassword"
                        android:paddingStart="40dp"
                        android:padding="10dp"
                        android:background="@drawable/add_item_edit_text_bg"
                        android:textSize="18dp"
                        android:textColor="?attr/colorOnBackground"
                        android:textStyle="normal"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonForgotPasswordEmailResetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/add_item_edit_text_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/buttonForgotPasswordResetPassword"
                    android:textSize="18dp" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>